--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -73,8 +73,10 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         #b4ffff !default;
-$dark:          #4bacb8 !default;
+$light:         $gray-100 !default;
+$dark:          $gray-900 !default;
+// $light:         #b4ffff !default;
+// $dark:          #4bacb8 !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
