商品頁面部分

--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -68,7 +68,8 @@ $colors: (
 
 // scss-docs-start theme-color-variables
 $primary:       #80deea !default;
-$secondary:     $gray-600 !default;
+// $secondary:     $gray-600 !default;
+$secondary:     #4bacb8  !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
