--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -68,6 +68,7 @@ $colors: (
 
 // scss-docs-start theme-color-variables
 $primary:       #4bacb8 !default;
+// $primary:       #468Da0 !default;
 $secondary:     $gray-600 !default;
 // $secondary:     #4bacb8  !default;
 $success:       $green !default;
