--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -3,6 +3,9 @@
 
 @import "~bootstrap/scss/bootstrap";
 @import "./styles/basic";
+@import "./styles/footer";
 @import "./styles/top";
 @import "./styles/category";
 @import "./styles/product";
+@import "./styles/cart";
+
