首頁的修正

--- a/src/assets/stylesheets/styles/_product.scss
+++ b/src/assets/stylesheets/styles/_product.scss
@@ -9,6 +9,12 @@
         position: relative;
         cursor: pointer;
     }
+    &:hover {
+        .hover-area {
+            opacity: 1;
+            padding-top: 10px;
+        }
+    }
 }
 
 .hover-area {
@@ -24,10 +30,4 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-/*ホバーエフェクト*/
-.p-card:hover .hover-area {
-    opacity: 1;
-    padding-top: 10px;
 }
