--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -16,3 +16,47 @@
         background-color: rgba(0,0,0,0.4)
     }
 }
+
+
+.p-scroll {
+	position:absolute;
+	left:50%;
+	bottom:60px;
+	height:50px;
+    span {
+        position: absolute;
+        left:-31px;
+        top: -25px;
+        color: #fff;
+        font-size: 1em;
+        letter-spacing: 0.05em;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 1px;
+        height: 30px;
+        background: #eee;
+        animation: move 1.4s ease-in-out infinite;
+        opacity:0;
+    }
+}
+
+@keyframes move{
+	0%{
+		height:0;
+		top:0;
+		opacity: 0;
+	}
+	30%{
+		height:30px;
+		opacity: 1;
+	}
+	100%{
+		height:0;
+		top:50px;
+		opacity: 0;
+	}
+}
