--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -3,9 +3,12 @@
 
 @import "~bootstrap/scss/bootstrap";
 @import "./styles/basic";
+@import "./styles/media";
+@import "./styles/header";
 @import "./styles/footer";
 @import "./styles/top";
 @import "./styles/category";
 @import "./styles/product";
+@import "./styles/image";
 @import "./styles/cart";
 
