--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -60,3 +60,21 @@
 		opacity: 0;
 	}
 }
+
+// hover的照片
+.p-zoomIn {
+    img {
+        transform: scale(1);
+        transition: .3s ease-in-out;
+    }
+}
+
+.p-zoomIn:hover img {
+    transform: scale(1.3);
+    overflow: hidden;
+}
+
+.p-zoomIn__inner {
+    cursor: pointer;
+    overflow: hidden;
+}
