--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
 
@@ -9,4 +10,8 @@
 @import "./styles/category";
 @import "./styles/product";
 @import "./styles/cart";
+@import "./styles/about";
+@import "./styles/pagetop";
+
+
 
