--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -62,19 +62,27 @@
 }
 
 // hover的照片
-.p-zoomIn {
+.zoomIn {
     img {
         transform: scale(1);
         transition: .3s ease-in-out;
     }
 }
 
-.p-zoomIn:hover img {
+.zoomIn:hover img {
     transform: scale(1.3);
     overflow: hidden;
 }
 
-.p-zoomIn__inner {
+.zoomIn__inner {
     cursor: pointer;
     overflow: hidden;
+}
+
+// section
+.section--about {
+    margin: 6em 0;
+    .background-image--about {
+        background-attachment: fixed;
+    }
 }
