--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -1,4 +1,4 @@
-.p-mainvisual {
+.p-mainvisual--sp {
     top: 0;
     bottom: 0;
     left: 0;
@@ -17,12 +17,54 @@
     }
 }
 
+.p-mainvisual {
+    position: absolute;
+    opacity: 0.9;
+    height: 100vh;
+    z-index: -1;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+    &__container {
+        position: absolute;
+        z-index: 10;
+        top: 45%;
+        width: 100%;
+        left: 10%;
+        // background-color: rgba(0,0,0,0.4)
+        @include sp {
+            left: 2%;
+        }
+    }
+        &__content {
+        background-color: rgba(0,0,0,0.4)
+    }
+}
+
+@keyframes zoomUp {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.15);
+    }
+  }
+  
+  .swiper-slide-active img,
+  .swiper-slide-duplicate-active img,
+  .swiper-slide-prev img{
+    animation: zoomUp 10s linear 0s 1 normal both;  
+  }
+
+
 
 .p-scroll {
 	position:absolute;
 	left:50%;
 	bottom:60px;
 	height:50px;
+    z-index: 99;
     span {
         position: absolute;
         left:-31px;
