--- a/src/assets/stylesheets/styles/_about.scss
+++ b/src/assets/stylesheets/styles/_about.scss
@@ -54,3 +54,7 @@
         background-color: rgba(0,0,0,0.6);
     }
 }
+
+.background-image--favorite {
+    background-image: url(https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1467&q=80);
+}
