--- a/src/assets/stylesheets/styles/_about.scss
+++ b/src/assets/stylesheets/styles/_about.scss
@@ -58,3 +58,13 @@
 .background-image--favorite {
     background-image: url(https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1467&q=80);
 }
+
+.background-title {
+    color: #fff;
+    z-index: 2;
+    background: rgba(0,0,0,.4);
+    padding: 15px;
+    h2 {
+        margin-bottom: 0;
+    }
+}
