my favorite list

--- a/src/assets/stylesheets/helpers/_variables.scss
+++ b/src/assets/stylesheets/helpers/_variables.scss
@@ -67,10 +67,9 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       #4bacb8 !default;
-// $primary:       #468Da0 !default;
+// $primary:       #347e87 !default;
+$primary:       #347e87 !default;
 $secondary:     $gray-600 !default;
-// $secondary:     #4bacb8  !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
