--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap");
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
 
@@ -10,10 +10,7 @@
 @import "./styles/category";
 @import "./styles/product";
 @import "./styles/cart";
-@import "./styles/about";
+@import "./styles/image";
 @import "./styles/pagetop";
 @import "./styles/toast";
 @import "./styles/slider";
-
-
-
