--- a/src/assets/stylesheets/styles/_basic.scss
+++ b/src/assets/stylesheets/styles/_basic.scss
@@ -1,28 +1,27 @@
 :root {
-    --swiper-theme-color: #80deea!important;
+  --swiper-theme-color: #80deea !important;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    background-color: #fafafa;
-    overflow-x: hidden;
+  background-color: #fafafa;
+  overflow-x: hidden;
 }
-
 .btn-primary {
-    color: #fff;
+  color: #fff;
 }
 
 .btn-primary.active {
-    color: #fff;
+  color: #fff;
 }
 
 .btn-outline-primary:hover {
-    color: #fff;
+  color: #fff;
 }
 
 .logo {
-    font-family: 'Zen Kurenaido', sans-serif;
+  font-family: "Zen Kurenaido", sans-serif;
 }
