--- a/src/assets/stylesheets/styles/_header.scss
+++ b/src/assets/stylesheets/styles/_header.scss
@@ -1,159 +1,156 @@
-
-
 /* ヘッダー */
 .header {
-    // background-color: #fff;
-    width: 100%;
-    height: 60px;
-    position: fixed;
-    top: 0;
-    left: 0;
+  // background-color: #fff;
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50;
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: inherit;
+    position: relative;
+    padding: 0;
+    @include sp {
+      padding: 0 10px;
+    }
+  }
+
+  &__title {
+    width: 80px;
+    font-size: 1.3em;
+    margin-bottom: 0;
+    a {
+      color: #fff;
+      font-family: "Zen Kurenaido", sans-serif;
+    }
+    @include sp {
+      width: 120px;
+    }
+  }
+  // nav
+  &__nav {
+    position: absolute;
     right: 0;
-    z-index: 50;
-    &__inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: inherit;
-        position: relative;
-        padding: 0;
-        @include sp {
-            padding: 0 10px;
-        }
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(120%);
+    background-color: #fff;
+    transition: ease 0.4s;
+    @include pc {
+      position: static;
+      transform: initial;
+      background-color: inherit;
+      height: inherit;
+      display: flex;
+      justify-content: end;
+      width: 50%;
     }
+  }
 
-    &__title {
-        width: 80px;
-        font-size: 1.3em;
-        margin-bottom: 0;
-        a {
-            color: #fff;
-            font-family: 'Zen Kurenaido', sans-serif;
-        }
-        @include sp {
-            width: 120px;
-        }
-    }
-    // nav
-    &__nav {
-        position: absolute;
-        right: 0;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100vh;
-        transform: translateX(120%);
-        background-color: #fff;
-        transition: ease .4s;
-        @include pc {
-            position: static;
-            transform: initial;
-            background-color: inherit;
-            height: inherit;
-            display: flex;
-            justify-content: end;
-            width: 50%;
-        }
-    }
-
-    &__hamburger {
-        width: 48px;
-        height: 100%;
-    }
+  &__hamburger {
+    width: 48px;
+    height: 100%;
+  }
 }
 
 .header.menu-scroll {
-    background: #fff;
-    .nav-list {
-        a {
-            color: #333;
-        }
-    }
-    .header__title {
-        a {
-            color: #333;
-        }
-    }
-}
-  
-.nav-list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 0;
-    @include pc {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        height: initial;
-        justify-content: flex-end;
-        position: inherit;
-        top: 0;
-        left: 0;
-        transform: translate(0, 0);  
-        margin-bottom: 0;
-    }
+  background: #fff;
+  .nav-list {
     a {
-        color: #fff;
-        width: 100%;
-        display: block;
-        text-align: center;
-        font-size: 1em;
-        margin-bottom: 24px;
+      color: #333;
     }
-    &:last-child a {
-        margin-bottom: 0;
+  }
+  .header__title {
+    a {
+      color: #333;
     }
+  }
 }
 
+.nav-list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 0;
+  @include pc {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    height: initial;
+    justify-content: flex-end;
+    position: inherit;
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    margin-bottom: 0;
+  }
+  a {
+    color: #fff;
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    margin-bottom: 24px;
+  }
+  &:last-child a {
+    margin-bottom: 0;
+  }
+}
 
 .hamburger {
-    background-color: transparent;
-    border-color: transparent;
-    z-index: 9999;
-    @include pc {
-        display: none;
-    }
-
-    span {
-        width: 100%;
-        height: 1px;
-        background-color: #000;
-        position: relative;
-        transition: ease .4s;
-        display: block;
-        &:nth-child(1) {
-            top: 0;
-        }
-        &:nth-child(2) {
-            margin: 8px 0;
-        }
-        &:nth-child(3) {
-            top: 0;
-        }
-    }
-}
-    
-/* ハンバーガーメニュークリック後のスタイル */
-  .header__nav.active {
-    transform: translateX(0);
+  background-color: transparent;
+  border-color: transparent;
+  z-index: 9999;
+  @include pc {
+    display: none;
   }
-  
-.hamburger.active {
-    span {
-        &:nth-child(1) {
-            top: 5px;
-            transform: rotate(45deg);
-        }
-        &:nth-child(2) {
-           opacity: 0;
-        }
-        &:nth-child(3) {
-            top: -13px;
-            transform: rotate(-45deg);
-        }
+
+  span {
+    width: 100%;
+    height: 1px;
+    background-color: #000;
+    position: relative;
+    transition: ease 0.4s;
+    display: block;
+    &:nth-child(1) {
+      top: 0;
     }
+    &:nth-child(2) {
+      margin: 8px 0;
+    }
+    &:nth-child(3) {
+      top: 0;
+    }
+  }
+}
+
+/* ハンバーガーメニュークリック後のスタイル */
+.header__nav.active {
+  transform: translateX(0);
+}
+
+.hamburger.active {
+  span {
+    &:nth-child(1) {
+      top: 5px;
+      transform: rotate(45deg);
+    }
+    &:nth-child(2) {
+      opacity: 0;
+    }
+    &:nth-child(3) {
+      top: -13px;
+      transform: rotate(-45deg);
+    }
+  }
 }
 
 // .cart-icon {
