--- a/src/assets/stylesheets/styles/_product.scss
+++ b/src/assets/stylesheets/styles/_product.scss
@@ -1,33 +1,33 @@
-// p-card 
+// p-card
 .p-card {
+  overflow: hidden;
+  &__image {
+    height: 400px;
+    background-size: cover;
+    background-position: center;
     overflow: hidden;
-    &__image {
-        height: 400px;
-        background-size: cover;
-        background-position:center;
-        overflow: hidden;
-        position: relative;
-        cursor: pointer;
+    position: relative;
+    cursor: pointer;
+  }
+  &:hover {
+    .hover-area {
+      opacity: 1;
+      padding-top: 10px;
     }
-    &:hover {
-        .hover-area {
-            opacity: 1;
-            padding-top: 10px;
-        }
-    }
+  }
 }
 
 .hover-area {
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    color: #fff;
-    background-color:	rgba(0,0,0,0.5);
-    opacity: 0;
-    transition: .3s ease-in-out;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
