--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -1,130 +1,128 @@
 .p-mainvisual--sp {
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image:url(https://find47.jp/uploads/image_file/content/000/003/877/web_detail_thumb.jpg);
-    background-size:cover ;
-    background-position: center center;
-    background-size: cover;
-    opacity: 0.9;
-    &__container {
-        opacity: 1;
-        z-index: 2;
-    }
-    &__content {
-        background-color: rgba(0,0,0,0.4)
-    }
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url(https://find47.jp/uploads/image_file/content/000/003/877/web_detail_thumb.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-size: cover;
+  opacity: 0.9;
+  &__container {
+    opacity: 1;
+    z-index: 2;
+  }
+  &__content {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
 }
 
 .p-mainvisual {
+  position: absolute;
+  opacity: 0.9;
+  height: 100vh;
+  z-index: -1;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  &__container {
     position: absolute;
-    opacity: 0.9;
-    height: 100vh;
-    z-index: -1;
-    img {
-        width: 100%;
-        height: 100%;
+    z-index: 10;
+    top: 45%;
+    width: 100%;
+    left: 10%;
+    // background-color: rgba(0,0,0,0.4)
+    @include sp {
+      left: 2%;
     }
-    &__container {
-        position: absolute;
-        z-index: 10;
-        top: 45%;
-        width: 100%;
-        left: 10%;
-        // background-color: rgba(0,0,0,0.4)
-        @include sp {
-            left: 2%;
-        }
-    }
-        &__content {
-        background-color: rgba(0,0,0,0.4)
-    }
+  }
+  &__content {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
 }
 
 @keyframes zoomUp {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1.15);
-    }
+  0% {
+    transform: scale(1);
   }
-  
-  .swiper-slide-active img,
-  .swiper-slide-duplicate-active img,
-  .swiper-slide-prev img{
-    animation: zoomUp 10s linear 0s 1 normal both;  
+  100% {
+    transform: scale(1.15);
   }
-
-
-
-.p-scroll {
-	position:absolute;
-	left:50%;
-	bottom:60px;
-	height:50px;
-    z-index: 99;
-    span {
-        position: absolute;
-        left:-31px;
-        top: -25px;
-        color: #fff;
-        font-size: 1em;
-        letter-spacing: 0.05em;
-    }
-
-    &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        width: 1px;
-        height: 30px;
-        background: #eee;
-        animation: move 1.4s ease-in-out infinite;
-        opacity:0;
-    }
 }
 
-@keyframes move{
-	0%{
-		height:0;
-		top:0;
-		opacity: 0;
-	}
-	30%{
-		height:30px;
-		opacity: 1;
-	}
-	100%{
-		height:0;
-		top:50px;
-		opacity: 0;
-	}
+.swiper-slide-active img,
+.swiper-slide-duplicate-active img,
+.swiper-slide-prev img {
+  animation: zoomUp 10s linear 0s 1 normal both;
+}
+
+.p-scroll {
+  position: absolute;
+  left: 50%;
+  bottom: 60px;
+  height: 50px;
+  z-index: 99;
+  span {
+    position: absolute;
+    left: -31px;
+    top: -25px;
+    color: #fff;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 1px;
+    height: 30px;
+    background: #eee;
+    animation: move 1.4s ease-in-out infinite;
+    opacity: 0;
+  }
+}
+
+@keyframes move {
+  0% {
+    height: 0;
+    top: 0;
+    opacity: 0;
+  }
+  30% {
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    height: 0;
+    top: 50px;
+    opacity: 0;
+  }
 }
 
 // hover的照片
 .zoomIn {
-    img {
-        transform: scale(1);
-        transition: .3s ease-in-out;
-    }
+  img {
+    transform: scale(1);
+    transition: 0.3s ease-in-out;
+  }
 }
 
 .zoomIn:hover img {
-    transform: scale(1.3);
-    overflow: hidden;
+  transform: scale(1.3);
+  overflow: hidden;
 }
 
 .zoomIn__inner {
-    cursor: pointer;
-    overflow: hidden;
+  cursor: pointer;
+  overflow: hidden;
 }
 
 // section
 .section--about {
-    margin: 6em 0;
-    .background-image--about {
-        background-attachment: fixed;
-    }
+  margin: 6em 0;
+  .background-image--about {
+    background-attachment: fixed;
+  }
 }
