--- a/src/assets/stylesheets/styles/_category.scss
+++ b/src/assets/stylesheets/styles/_category.scss
@@ -1,8 +1,28 @@
-.p-category li a {
-  text-decoration: none;
-
-  &:hover {
-    color: #fff;
+.p-category{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  list-style: none;
+  padding-left: 0;
+  position: sticky;
+  top: 10%;
+  .list-group-item.active {
+    a {
+      color: #fff;
+    }
+  }
+  .is-active {
+    a {
+      color: #fff;
+    }
+  }
+  li a {
+    text-decoration: none;
+    display: flex;
+    @include sp {
+      justify-content: center;
+    }
   }
 }
 
