--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -31,10 +31,10 @@
     z-index: 10;
     top: 45%;
     width: 100%;
-    left: 10%;
-    // background-color: rgba(0,0,0,0.4)
+    left: 83%;
+    transform: translate(-50%, -50%);
     @include sp {
-      left: 2%;
+      left: 53%;
     }
   }
   &__content {
