--- a/src/assets/stylesheets/styles/slider.scss
+++ b/src/assets/stylesheets/styles/slider.scss
@@ -5,3 +5,23 @@
     margin-top: -70px;
   }
 }
+
+:root {
+  --swiper-theme-color: #347e87 !important;
+  --swiper-navigation-size:28px!important;
+  --swiper-pagination-bullet-inactive-color:#fff!important;
+  --swiper-pagination-bullet-inactive-opacity:0.7!important;
+}
+
+.swiper-button-next:after, .swiper-button-prev:after {
+  font-size: 20px!important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  width: 40px!important;
+  height: 40px!important;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.7;
+}
