--- a/src/assets/stylesheets/all.scss
+++ b/src/assets/stylesheets/all.scss
@@ -6,6 +6,7 @@
 @import "./styles/basic";
 @import "./styles/media";
 @import "./styles/header";
+@import "./styles/footer";
 @import "./styles/top";
 @import "./styles/category";
 @import "./styles/product";
@@ -14,3 +15,7 @@
 @import "./styles/pagetop";
 @import "./styles/toast";
 @import "./styles/slider";
+@import "./styles/button";
+@import "./styles/favorite";
+
+
