--- a/src/assets/stylesheets/styles/_category.scss
+++ b/src/assets/stylesheets/styles/_category.scss
@@ -6,6 +6,9 @@
   list-style: none;
   padding-left: 0;
   position: sticky;
+  @include sp {
+    margin: 20px 0 50px;
+  }
   top: 10%;
   .list-group-item.active {
     a {
