--- a/src/assets/stylesheets/styles/_product.scss
+++ b/src/assets/stylesheets/styles/_product.scss
@@ -1,8 +1,9 @@
-// p-card
 .p-card {
   overflow: hidden;
+  position: relative;
+  border: none;
   &__image {
-    height: 400px;
+    height: 300px;
     background-size: cover;
     background-position: center;
     overflow: hidden;
@@ -14,6 +15,21 @@
       opacity: 1;
       padding-top: 10px;
     }
+  }
+  &__body {
+    display: block;
+    background: #fff;
+    padding: 1.5rem;
+    @include sp {
+      background: #fafafa;
+    }
+  }
+
+  &__text {
+    height: 4.5em;
+    overflow: hidden;
+    margin-bottom: 0;
+    color: #6c757d;
   }
 }
 
@@ -30,4 +46,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.rule-list {
+  line-height: 2;
+}
+
+.product__image {
+  height: 500px;
+  background-size: cover; 
+  background-position:center 
 }
