--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -1,4 +1,5 @@
 .p-mainvisual--sp {
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -18,7 +19,6 @@
 }
 
 .p-mainvisual {
-  // position: absolute;
   opacity: 0.9;
   height: 100vh;
   z-index: -1;
@@ -39,6 +39,13 @@
   }
   &__content {
     background-color: rgba(0, 0, 0, 0.4);
+    text-align: center;
+    padding: 1rem;
+  }
+  &__outer--sp {
+    min-height: 100vh;
+    flex-direction: column;
+    display: flex;
   }
 }
 
@@ -117,12 +124,4 @@
 .zoomIn__inner {
   cursor: pointer;
   overflow: hidden;
-}
-
-// section
-.section--about {
-  margin: 6em 0;
-  .background-image--about {
-    background-attachment: fixed;
-  }
 }
