--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -125,3 +125,10 @@
   cursor: pointer;
   overflow: hidden;
 }
+
+// .product-slider {
+//   overflow: inherit;
+//   @include sp {
+//     overflow: hidden;
+//   }
+// }
