--- a/src/assets/stylesheets/styles/_product.scss
+++ b/src/assets/stylesheets/styles/_product.scss
@@ -30,6 +30,19 @@
     overflow: hidden;
     margin-bottom: 0;
     color: #6c757d;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+  }
+  &__tag {
+    background: #347e87;
+    color: #fff;
+    writing-mode: vertical-lr;
+    position: absolute;
+    z-index: 2;
+    padding: 5px;
+    right: 0;
+    letter-spacing: 2px;
   }
 }
 
