--- a/src/assets/stylesheets/styles/_image.scss
+++ b/src/assets/stylesheets/styles/_image.scss
@@ -59,28 +59,31 @@
 }
 
 .background-image--about {
-  background-image: url(https://images.unsplash.com/photo-1452421822248-d4c2b47f0c81?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80);
+  background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/shio-vue/1650181415197.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=fQZQH48HPO6FjFniq%2FSJeBiFXLJdSMsHo8rjBwElPJTfZjp2vNYLJj3r5xvUvgnLBJDpGwAl6r6c0tzpHu2a%2F2AptQHciq9fnMkMpdGLEjG7s8LnGU%2FBJT2HdI%2BXQtsNFqK3RoI3Sdt8IisxxPlhGAlDDUuv1rRSDRAxa1yty%2BfWjCm%2FSK9v%2BIMzxwNPuYVIwcjITJ3qrFin50al0Qmu19ymwAzek394lTai7pn%2F36ANXs7bAQUCqEha8smGEqIKuFgcAUq%2Bin5vm3L6Thvh8E21Cl2ZiGrs1kECSqPw9rGIvYySg1gOU8LQhUJq1gSzIgM72EqD3jx%2BzdrHU25uSA%3D%3D");
 }
 
 .background-image--products {
-  background-image: url(https://images.unsplash.com/photo-1596744223084-86a7c1cb68cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80);
+  background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/shio-vue/1650181547356.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=cBvzAsVeUV1jcnfJr7%2B7Hrp9rHo5gpBBQCA6i5GAVMRE3sXJ9X3eww%2BDWYMqR1Etg0WmNZnvujXk17VsZ9hCN3XXVgw5Ly3gIObt2awQIyDfTA3LcvhiHXlE6shLfnlozE%2B%2FWITM4U0HcmECDZvF86lP%2B0r7mcJTdIgIWQYYQtMaL4XUwDbVdJ632PDvWxu1%2B6O2h4J1XeuPNWI%2Fz3sNbvgRjEsTJankLv0jI%2FJNFvyHaKYiUeN56%2FddNCR%2FAnWyxknBDU%2FBlKcIU6%2Bw05TEpZQ95UfVfB%2FEbxx8JR9gbuu2TK1NX26RS0eMAgIFZFhe%2Fpo1G5ma38lPZEuijSEkcg%3D%3D");
   opacity: 0.8;
 }
 
 .background-image--introduction {
-  background-image: url(https://images.unsplash.com/photo-1593935298602-f73995eecee3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80);
+  background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/shio-vue/1650181602493.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=VShtaJbwwTAyF8WGYkZqEQoP4OCXOoDPFC0IaESX25Nn5KOrP5PtcTwUA%2BoztdkWaZJaEwB40D8dPDmvcn3DCYRTGVpYFlhuwqAO6KVH%2FDCWd5AvQmEu%2BUqUGlHWULMXUXn2uE4nFZO53AOPPF00DnLjS0L66acWIPrRmKKNURL%2F0%2BzZzFW%2Bh9AUtEEtOuPmx7TlcVJftU5KGllfsJfLfDa4ccM62PTQCJz6PUc3OUntr7xKC0Pe7wsraQknCeyyekQKsqbKo4mC9SHPiTlByWdMhyTsoCAHB85SN1boQoB8rcGeeeaqNqxXpRvDLK50uTilPyd2L3AU5xOVdeK%2FrA%3D%3D");
   opacity: 0.5;
   background-attachment: fixed;
 }
 
 .background-image--cart {
-  background-image: url(https://images.unsplash.com/photo-1505228395891-9a51e7e86bf6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1633&q=80);
+  background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/shio-vue/1650181642532.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=AqEWtYOFwgVVN1WIaPca2QlP9V74NcCzJ04VZLarz7ed%2BpRVKwnfQWLbzfukWytasiizEiHBtzWgN%2BdQsAdfZAn5pYGeqOrjVDDnJzr%2BlEA7NoejSMztjsHKRmsujIH7Y7EI3%2F4AEad3%2B0RsS4idx9yyCNBRLfKEihYXE9%2BJ9AsDN9tOXMJ9G3UkwdfWG2h091AI8LZRy7Bxbh1Uxa%2FUyd%2FhfFUCNMBfECZZ1YiIu21HbYONAZfUIKdzZ0zBmKtVcFfpxAr2DUuSPTPFAoIaKemCLatJ74HLJWzRSBliYiDyuCi0%2BTMtMzaSePYD5D6BodSRT564bKdWsGpzqqLcsA%3D%3D");
 }
 
 .background-image--complete {
-  background-image: url(https://images.unsplash.com/photo-1507608869274-d3177c8bb4c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+  background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/shio-vue/1650181681765.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=Bi2PAht20VSAX2SG%2FYsBVb8eRobGzHuObeaL0YE0wbRaTG1gRZ7x%2FBak5dwBZkBNlblbXcT%2FSYLpMQ6f3laKbQPHqg1K9i1wWKEamCfgYu6BDivVF5fiU2AyE9hhFGcboP6H7Km4wRy5PxgaJ10cqV4E3VBMAn5Y6XvAiWgi3UeAuuTuOqUX7tOAkwX%2BMlMP0KW5qcsndg8Hd0T9JDx23tQzHieGmO4FQw88CzOZufnonZhuPnIG3qWjt5mRCcTKz%2Bl4XyAqvZH2J%2Ft3mt5wCBJGnaTLL578L7qUU9k3b8hVR8hX8V0ck%2BTadZ179jGEzfR8nfeeLHlNWsc%2Bldq7Lg%3D%3D");
 }
 
+.background-image--favorite {
+  background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/shio-vue/1650181719825.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=VKEKEG3klppRphLCR4tl4KtmKl7V4%2FDWpAkkut%2BeGkUYDndLk7Bm8q3UL%2BXvuSHaeIsGzk5D6XNPBEK8anblH7cuWwTxQ5EcBN%2BZdw1wMbVNeHjpbl3djKhxz02qrL%2Fbf%2Bvz2Elk%2BHG05oyiSr5fL9Vb2aBz0gv7nJvLWACPhPFJ9Mmgx7FpIoOJ8iQ9J0k2Q7jAx3uVS9znjY3FrqrDkLoCMHpzp%2BEMJLCfu%2B3dixApp2scnYJB7Kv6UElVQgAj6Zk5kySmAyNveqBMHq5nok5PFWm9McHGjBaqulhRrxtiD%2FkJ8l3ooyX4ngQUltKuuzAQB3lM04CeFcu5dBCUvw%3D%3D");
+}
 
 .background-image--product {
   height: 250px;
@@ -104,10 +107,6 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.6);
   }
-}
-
-.background-image--favorite {
-  background-image: url(https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1467&q=80);
 }
 
 .background-title {
