--- a/src/assets/stylesheets/styles/_basic.scss
+++ b/src/assets/stylesheets/styles/_basic.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tangerine&display=swap');
+
 a {
   text-decoration: none;
 }
@@ -25,4 +27,42 @@ body {
 
 .container-404 {
   min-height: 100vh;
+}
+.section-heading {
+  text-align: center;
+  font-size: 1.5rem;
+  position: relative;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+  border-bottom:solid 3px #347e87 ;
+  &::after {
+  position: absolute;
+  content: " ";
+  display: block;
+  border-bottom: solid 3px #98dae3;
+  bottom: -3px;
+  width: 30%;
+  }
+}
+
+.divider-separator {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 300px;
+  color: #347e87;
+  &::before {
+    position: absolute;
+    display: block;
+    content: "";
+    height: 1px;
+    background: #347e87;
+    padding-right: 38%;
+  }
+  &__text {
+    margin-left: 42%;
+    font-size: 3rem;
+    font-family: 'Tangerine', cursive;
+  }
 }
