--- a/src/assets/stylesheets/styles/_header.scss
+++ b/src/assets/stylesheets/styles/_header.scss
@@ -57,7 +57,44 @@
   }
 }
 
-// header下げる時
+.nav-link {
+  position: relative;
+	padding: 0.7em 1em;
+	display: inline-block;
+	transition: .3s;
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    content: '';
+    width: 0;
+    height: 1px;
+    background-color: #fff;
+    transition: .3s;
+    transform: translateX(-50%);
+  }
+  &:hover::after {
+    width: 90%;
+  }
+  &:hover {
+    color: #fff;
+  }
+}
+
+.nav-link.active {
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    content: '';
+    width: 90%;
+    height: 1px;
+    background-color: #fff;
+    transform: translateX(-50%);
+  }
+}
+
+
 .header.menu-scroll {
   background: #fff;
   .nav-list {
