--- a/src/assets/stylesheets/styles/_button.scss
+++ b/src/assets/stylesheets/styles/_button.scss
@@ -1,10 +1,10 @@
 .button--search {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    display: flex;
-    justify-content: center;
-    width: 200px;
-    z-index: 2;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  z-index: 2;
 }
 .button--jump {
   color: #fff;
@@ -20,7 +20,36 @@
 }
 
 @keyframes pulsation {
-    0% { transform: scale(1); }
-    50% { transform: scale(0.9); }
-    100% { transform: scale(1.1); }
+  0% { transform: scale(1); }
+  50% { transform: scale(0.9); }
+  100% { transform: scale(1.1); }
+}
+.button--slide {
+  width: 200px;
+  font-size: 16px;
+  color: #347e87;
+  border: 1px solid #347e87;
+  position: relative;
+  z-index: 1;
+  transition: .3s;
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: #347e87;
+    transform-origin: 100% 50%;
+    transform: scaleX(0);
+    transition: transform ease .3s;
+  }
+  &:hover {
+    color: #fff;
+  }
+  &:hover::before {
+    transform-origin: 0% 50%;
+    transform: scaleX(1);
+  }
 }
