--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -9,6 +9,7 @@
   background-position: center center;
   background-size: cover;
   opacity: 0.9;
+  height: 100vh;
   &__container {
     opacity: 1;
     z-index: 2;
