--- a/src/assets/stylesheets/styles/_product.scss
+++ b/src/assets/stylesheets/styles/_product.scss
@@ -2,6 +2,9 @@
   overflow: hidden;
   position: relative;
   border: none;
+  @include sp {
+    border: 1px solid #347e87;
+  }
   &__image {
     height: 300px;
     background-size: cover;
@@ -68,5 +71,13 @@
 .product__image {
   height: 500px;
   background-size: cover; 
-  background-position:center 
+  background-position:center;
+  @include sp {
+    height: 300px;
+  }
+}
+.product__subtitle {
+  @include sp {
+    text-align: center;
+  }
 }
