--- a/src/assets/stylesheets/styles/_favorite.scss
+++ b/src/assets/stylesheets/styles/_favorite.scss
@@ -3,11 +3,20 @@
         width: 80px;
         height: 80px;
         object-fit: cover;
+        @include sp {
+            width: auto;
+        }
     }
 
     &__price {
         min-width: 160px;
         border: 0;
         vertical-align: middle;
+    }
+
+    &__table {
+        @include sp {
+            display: none;
+        }
     }
 }
