--- a/src/assets/stylesheets/styles/_top.scss
+++ b/src/assets/stylesheets/styles/_top.scss
@@ -9,7 +9,7 @@
   background-position: center center;
   background-size: cover;
   opacity: 0.9;
-  height: 100vh;
+  height: 88vh;
   &__container {
     opacity: 1;
     z-index: 2;
@@ -26,6 +26,12 @@
   img {
     width: 100%;
     height: 100%;
+  }
+  &__wrapper {
+    position: relative;
+    @include sp {
+      height: 88vh;
+    }
   }
   &__container {
     position: absolute;
@@ -44,7 +50,7 @@
     padding: 1rem;
   }
   &__outer--sp {
-    min-height: 100vh;
+    // min-height: 100vh;
     flex-direction: column;
     display: flex;
   }
@@ -71,6 +77,9 @@
   bottom: 60px;
   height: 50px;
   z-index: 99;
+  @include sp {
+    bottom: 95px;
+  }
   span {
     position: absolute;
     left: -31px;
@@ -130,6 +139,9 @@
 .slogan {
   padding: 30px 0;
   margin: 50px 0;
+  @include sp {
+    margin-top: 10px;
+  }
   h3 {
     font-family: "Zen Kurenaido", sans-serif;
   }
@@ -138,5 +150,10 @@
     @include sp {
       padding: 0 10px;
     }
+  }
+}
+.feature__title {
+  @include sp {
+    text-align: center;
   }
 }
