--- a/src/assets/stylesheets/styles/_header.scss
+++ b/src/assets/stylesheets/styles/_header.scss
@@ -98,6 +98,7 @@
 
 .header.menu-scroll {
   background: #fff;
+  box-shadow:0px 3px 8px rgb(0 0 0 / 16%) ;
   .nav-list {
     a {
       color: #333;
