--- a/src/assets/stylesheets/styles/_product.scss
+++ b/src/assets/stylesheets/styles/_product.scss
@@ -2,9 +2,7 @@
   overflow: hidden;
   position: relative;
   border: none;
-  @include sp {
-    border: 1px solid #347e87;
-  }
+  box-shadow:0px 3px 8px rgb(0 0 0 / 16%) ;
   &__image {
     height: 300px;
     background-size: cover;
